Added little o macro.

--- a/local_definitions.tex
+++ b/local_definitions.tex
@@ -1,4 +1,5 @@
 \DeclareMathOperator{\E}{\mathcal{E}}
 \DeclareMathOperator{\bigo}{\mathcal{O}}
+\DeclareMathOperator{\littleo}{o}
 \declaretheorem[name=Main Theorem]{mainthm}
 \crefname{mainthm}{Main Theorem}{Main Theorems}
