--- a/main.tex
+++ b/main.tex
@@ -462,7 +462,7 @@ In this case, we don't have the same integrability structure as with \(C = 1\). 
 \label{lem:stationaryC}
 For each \(\lambda > 0 \) there exists a \emph{strictly monotone} stationary solution \(\xi_{\lambda}\) (solving \eqref{eq:stationary}) with the following properties:
 \begin{enumerate}
-\item \(\xi_{\lambda} (r) = \sqrt{F'(0)} \lambda r^{\beta_+} + \bigo(r^{\beta + \epsilon}) \text{ as } r \to 0\) and for some \(\epsilon > 0\) and where \(\beta_+\) is the positive root of the characteristic equation, \label{itm:stationaryC_asymptotic}
+\item \(\xi_{\lambda} (r) = \sqrt{F'(0)} \lambda r^{\beta_+} + \littleo(r^{\beta_+}) \text{ as } r \to 0\) where \(\beta_+\) is the positive root of the characteristic equation, \label{itm:stationaryC_asymptotic}
 \item For every \(r > 0\), the pointwise limit, \(\lim_{\lambda \to 0} \xi_{\lambda} (r) = 0\), \label{itm:stationaryC_lambda_0}
 \item For every \(r > 0\), the pointwise limit, \(\lim_{\lambda \to \infty} \xi_{\lambda} (r) = a\). \label{itm:stationaryC_lambda_infty}
 \end{enumerate}
@@ -515,118 +515,28 @@ G(\varphi) = r^{\beta_-} \int \left[\rho^{\beta_+ - \beta_- - 1} \int \left(\tau
 \end{equation}
 and absorbing \(\tfrac{1}{\beta_+ - \beta_-}\) (recall \(\beta_+ \ne \beta_-\)) into \(C_+\), we have
 \[
-(\Id - G) (\xi) = C_+ r^{\beta_+} + C_- r^{\beta_-}.
+\xi = G(\xi) + C_+ r^{\beta_+} + C_- r^{\beta_-}.
 \]
-Recalling that we require \(\xi(0) = 0\), and that \(\beta_- < 0\), we set \(C_- = 0\) and thus seek solutions of
-\begin{equation}
-\label{eq:stationaryC_implicit}
-(\Id - G) (\xi) = C_+ r^{\beta_+}
-\end{equation}
-for arbitrary \(C_+ > 0\).
-
-Formally then, we obtain the representation formula,
-\begin{equation}
-\label{eq:stationaryC_formal}
-\xi = (\Id - G)^{-1} \left(C_+ r^{\beta_+}\right).
-\end{equation}
 Note that in the case \(\bar{F} = 0\) we have \(G = 0\) and as expected, we recover the general solution, \(\xi = C_+ r{\beta_+} + C_- r^{\beta_-}\) to the linearised equation \(L(\xi) = 0\).
 
-In order prove the existence and uniqueness of a solution to \eqref{eq:stationaryC_implicit} we use a suitable contraction mapping principle on a suitable function space to ensure the existence of a unique fixed point. To this end, recall that there is a \(z_0 \in (0, a)\) and an \(M > 0\) such that for all \(z \in [0, z_0]\),
-\[
-\abs{\bar{F}(z)} \leq M z^{1+\alpha}.
-\]
-Given \(\epsilon > 0\) and \(r_0 < \left(\tfrac{z_0}{\lambda + \epsilon}\right)^{1/(\beta_+)}\), define
+Recalling that \(\beta_- < 0\) and that we require \(\xi(0) = 0\), we set \(C_- = 0\), rewrite \(\lambda = C_+\), and seek a solution of
 \begin{equation}
-\label{eq:contraction_space}
-X = X_{\epsilon,r_0} = \left\{\xi \in C([0, 1] \to \R_{\geq 0}) : \forall r \in [0, r_0], \abs{\xi(r)} \leq \epsilon r^{\beta_+} \right\}.
+\label{eq:stationaryC_implicit}
+\xi = G(\xi) + \lambda r^{\beta_+}
 \end{equation}
-We claim that
-\begin{enumerate}
-\item \(X \subseteq C([0, 1])\) is closed with respect to the sup-norm, \(\|\cdot\|_{\infty}\), \label{itm:closed}
-\item \(G : X \to X\), \label{itm:self_map}
-\item \(G\) is a strict contraction mapping with respect to the sup-norm, \(\|\cdot\|_{\infty}\). \label{itm:contraction}
-\end{enumerate}
-Assuming the claim, then there exists a unique fixed point of \(G\) in \(X\). Existence and uniqueness of solutions to \eqref{eq:stationaryC_implicit} is obtained by taking any \(\lambda > 0\) and defining
-\[
-X_{\lambda} = \{\xi : \xi - \lambda r^{\beta_+} \in X\}, \quad T_{\lambda} : \xi \in X_{\lambda} \mapsto G(\xi) + \lambda r^{\beta_+} \in X_{\lambda}.
-\]
-Then \(X_{\lambda}\) also has a unique fixed point, which is the desired solution.
+for arbitrary \(\lambda > 0\).
 
-Thus we must verify the claim. Point \ref{itm:closed} is straight forward: for each \(z \in \R\) and \(r \in [0, r_0]\), the function
+In order prove the existence and uniqueness of a solution to \eqref{eq:stationaryC_implicit}, we seek a suitable function space to which we may apply a contraction mapping principle, ensuring the existence of a unique fixed point. This is achieved in \Cref{lem:contraction} below, where we prove that for any \(\lambda > 0\) and \(0 < \epsilon < \lambda\), there is an \(R_0 > 0\) such that for any \(r_0 \in (0, R_0)\), there exists a unique \(\xi = \xi_{\epsilon, \lambda, r_0}\) satisfying \eqref{eq:stationaryC_implicit} and such that
 \[
-\Phi : (z, r) \mapsto \abs{z} - \epsilon r^{\beta_+}
+\abs{\xi(r) - \lambda r^{\beta_+}} \leq \epsilon r^{\beta_+}, \quad r \in [0, r_0].
 \]
-is a continuous map \(\R \times [0, r_0] \to \R\). Now if \((\xi_n)_{n \in \N} \subseteq X\) is such that \(\xi_n \to \xi\) with respect to \(\|\cdot \|_{\infty}\), then for every \(r \in [0, r_0]\) we have \(\xi_n(r) \to \xi(r)\) and \(\Phi(\xi_n(r), r) \leq 0\). Thus by continuity, for every \(r \in [0, r_0]\), \(\Phi(\xi(r), r) \leq 0\) and \(\xi \in X\).
-
-For point \ref{itm:self_map}, we need to show that for \(\xi \in X\) and all \(r \in [0, r_0]\) we have
+Notice that if \(\epsilon' \leq \epsilon\) then \(\xi_{\epsilon', \lambda, r_0}\) satisfies the requirements for \(\xi_{\epsilon, \lambda, r_0}\) hence by uniqueness,
 \[
-\abs{G(\xi(r))} \leq \epsilon r^{\beta_+}.
+\xi_{\epsilon', \lambda, r_0} = \xi_{\epsilon, \lambda, r_0}, \quad \epsilon' \leq \epsilon
 \]
-Being more explicit in the bounds of integration in the definition of \(G\) from \eqref{eq:stationaryC_G}, we take
+so that \(\xi_{\epsilon, \lambda, r_0}\) is independent of \(\epsilon\). Similar arguments apply for \(r_0' \geq r_0\), so that \(\xi_{\epsilon, \lambda, r_0}\) is independent of both \(\epsilon\) and \(r_0\) providing a unique, self similar solution, \(\xi_{\lambda}\) amongst the class of continuous functions satisfying
 \[
-\begin{split}
-G(\xi(r)) = r^{\beta_-} \int_0^r \left[\rho^{\beta_+ - \beta_- - 1} \int_0^{\rho} \left(\tau^{-(\beta_+ + 1)} \bar{F}(\xi(\tau)) \right)d\tau\right] d\rho.
-\end{split}
-\]
-To show that \(G\) is well defined and maps to \(X\), note that in defining \(X\) in \eqref{eq:contraction_space}, we used that there is a \(z_0 \in (0, a)\) and an \(M > 0\) such that for all \(z \in [0, z_0]\),
-\[
-\abs{\bar{F}(z)} \leq M z^{1+\alpha}
-\]
-and that we chose \(r_0 < \left(\tfrac{z_0}{\lambda + \epsilon}\right)^{1/(\beta_+)}\). Thus from the definition of \(X\), for \(r \in [0, r_0]\) we have
-\[
-0 \leq \xi(r) \leq (\lambda + \epsilon) r^{\beta_+} \leq (\lambda + \epsilon) r_0^{\beta_+} < z_0,
-\]
-and
-\[
-\abs{\bar{F}(\xi(r))} \leq M \abs{\xi(r)}^{1+\alpha} \leq M (\lambda + \epsilon)^{1+\alpha} r^{(1+\alpha)\beta_+}.
-\]
-
-
-Given \(\lambda, \epsilon > 0\) and \(r_0 < \left(\tfrac{z_0}{\lambda + \epsilon}\right)^{1/(\beta_+)}\), define
-\begin{equation}
-\label{eq:contraction_space}
-X = X_{\lambda,\epsilon,r_0} = \left\{\xi \in C([0, 1] \to \R_{\geq 0}) : \forall r \in [0, r_0], \abs{\xi(r) - \lambda r^{\beta_+}} \leq \epsilon r^{\beta_+} \right\}
-\end{equation}
-and define
-\begin{equation}
-\label{eq:contraction_map}
-T(\xi) = T_{\lambda} (\xi) = G(\xi) + \lambda r^{\beta_+}.
-\end{equation}
-We claim that
-\begin{enumerate}
-\item \(X \subseteq C([0, 1])\) is a closed with respect to the sup-norm, \(\|\cdot\|_{\infty}\), \label{itm:closed}
-\item \(T : X \to X\), \label{itm:self_map}
-\item \(T\) is a strict contraction mapping with respect to the sup-norm, \(\|\cdot\|_{\infty}\). \label{itm:contraction}
-\end{enumerate}
-
-Point \ref{itm:closed} is straight forward: for each \(r \in [0, r_0]\), the function
-\[
-\Phi : (z, r) \mapsto \abs{z - \lambda r^{\beta_+}} - \epsilon r^{\beta_+}
-\]
-is a continuous map \(\R \times [0, r_0] \to \R\). Now if \((\xi_n)_{n \in \N} \subseteq X\) is such that \(\xi_n \to \xi\) with respect to \(\|\cdot \|_{\infty}\), then for every \(r \in [0, r_0]\) we have \(\xi_n(r) \to \xi(r)\) and \(\Phi(\xi_n(r), r) \leq 0\). Thus by continuity, for every \(r \in [0, r_0]\), \(\Phi(\xi(r), r) \leq 0\) and \(\xi \in X\).
-
-For point \ref{itm:self_map}, from definition \eqref{eq:contraction_map} it suffices to show that for \(\xi \in X\) and all \(r \in [0, r_0]\) we have
-\[
-\abs{G(\xi)} \leq \epsilon r^{\beta_+}.
-\]
-Being more explicit in the bounds of integration in the definition of \(G\) from \eqref{eq:stationaryC_G}, we take
-\[
-\begin{split}
-G(\xi(r)) = r^{\beta_-} \int_0^r \left[\rho^{\beta_+ - \beta_- - 1} \int_0^{\rho} \left(\tau^{-(\beta_+ + 1)} \bar{F}(\xi(\tau)) \right)d\tau\right] d\rho.
-\end{split}
-\]
-
-Now in defining \(X\) in \eqref{eq:contraction_space}, we used that there is a \(z_0 \in (0, a)\) and an \(M > 0\) such that for all \(z \in [0, z_0]\),
-\[
-\abs{\bar{F}(z)} = M z^{1+\alpha}
-\]
-and that we chose \(r_0 < \left(\tfrac{z_0}{\lambda + \epsilon}\right)^{1/(\beta_+)}\). Thus from the definition of \(X\), for \(r \in [0, r_0]\) we have
-\[
-0 \leq \xi(r) \leq (\lambda + \epsilon) r^{\beta_+} \leq (\lambda + \epsilon) r_0^{\beta_+} < z_0,
-\]
-and
-\[
-\abs{\bar{F}(\xi)(r)} \leq M \abs{\xi(r)}^{1+\alpha} \leq M (\lambda + \epsilon)^{1+\alpha} r^{(1+\alpha)\beta_+}.
+\xi = \lambda r^{\beta_+} + \littleo(r^{\beta_+}) \text{ as } r \to 0.
 \]
 \end{proof}
 
@@ -635,11 +545,9 @@ In the case, \(C = 1\), the characteristic equation is \(p(\beta) = \beta^2 - F'
 \[
 L_+ = \partial_r - \frac{\beta_+ - 1}{r}, \quad L_- = \partial_r + \frac{\beta_+}{r}.
 \]
-It seems this difference of squares structure is what allows for the substitution \(r = e^w\) in the \(C=1\) case described above. Following the discussion there, the reader will observe that integrating to obtain \(\zeta'\) and then integrating again to obtain \(\zeta\) is nothing but factoring \(L\) as the composition of first order operators. It's just that for \(C = 1\), it can be done quite directly after changing variables whereas for the general case, we proceeded slightly less directly. Needless to say, this factoring for \(C = 1\) was the motivation for the general case.
-\end{rem}
+It seems this difference of squares structure is what allows for the substitution \(r = e^w\) in the \(C=1\) case described above.
 
-\begin{proof}[Proof 2]
-The change of variables for \(C \ne 1\) is
+The corresponding substitution for \(C \ne 1\) is
 \[
 r = [1 + (1-C)w]^{\tfrac{1}{1-C}}.
 \]
@@ -647,26 +555,19 @@ with
 \[
 \zeta(w) = \xi\left([1 + (1-C)w]^{\tfrac{1}{1-C}}\right).
 \]
-Letting \(w_0 = - \frac{1}{1-C}\), we have the range of \(w\) and initial condition at \(r=0\):
-\[
-\begin{cases}
-w \geq w_0, \quad \zeta(w_0) = 0; & C < 1 \\
-w \leq w_0, \quad \zeta(-\infty) = 0; & C > 1.
-\end{cases}
-\]
-
-This change of variables leads to \(\zeta\) satisfying
+for \(w \leq w_0 = - \frac{1}{1-C}\), with initial condition \(\zeta(-\infty) = 0\). This change of variables leads to \(\zeta\) satisfying
 \begin{equation}
 \label{eq:stationaryC_change_var}
 \zeta'' = [1 + (1-C)w]^{-2} \left(r^2 \xi'' + C r \xi'\right) = [1 + (1-C)w]^{-2} F(\zeta).
 \end{equation}
+
 Note that in the limit,
 \[
 \lim_{C\to 1} [1 + (1-C)w]^{\tfrac{1}{1-C}} = e^w
 \]
 and as expected, we recover the change of variables from the \(C = 1\).
 
-Multiplying both sides by \(\zeta'\) and rearranging, we may rewrite this as
+Multiplying both sides of \eqref{eq:stationaryC_change_var} by \(\zeta'\) and rearranging, we may rewrite this as
 \[
 [(\zeta')^2]' = 2 [1 + (1-C)w]^{-2} F(\zeta) \zeta'.
 \]
@@ -681,22 +582,185 @@ Letting \(\eta = \zeta'\) we then have the non-linear system
 [\eta^2]' &= m(w) F(\zeta) \eta
 \end{cases}
 \]
-. Letting \(q(w) = \frac{1}{2} [1 + (1-C)w]^2\), we make a further rewrite as
+
+The factor \(m(w)\) now makes direct integration difficult. What's more, \(m(w)\) is not integrable up to \(w_0\) complicating obtaining solutions. Presumably one could formulate a suitable existence result as in \Cref{lem:stationaryC} but there seems no great advantage gained by making the change of variables which is one reason why we work with the original equation. Perhaps more importantly however, is that the proof give for \Cref{lem:stationaryC} shows the influence of the roots \(\beta_{\pm}\) of the characteristic equation \eqref{eq:char_eqn}.
+\end{rem}
+
+Now we prove the claimed contraction mapping used in the proof of \Cref{lem:stationaryC}. Recall that \(\bar{F}(z) = \bigo(z^{1+\alpha})\). Then there exists \(z_0 \in (0, a)\) and \(M > 0\) such that,
+\begin{equation}
+\label{eq:barF_bound}
+\abs{\bar{F}(z)} < M z^{1+\alpha}, \quad z \in (0, z_0].
+\end{equation}
+
+
+\begin{lemma}
+\label{lem:contraction}
+Given \(\lambda > 0\) and \(0 < \epsilon < \lambda\) and
+\begin{equation}
+\label{eq:r_0}
+r_0 < R_0 := \min\left\{\left(\tfrac{z_0}{\lambda + \epsilon}\right)^{1/\beta_+}, \left(\frac{\alpha\beta_+((1+\alpha)\beta_+ - \beta_-)\epsilon}{M (\lambda + \epsilon)^{1+\alpha}}\right)^{1/\alpha\beta_+}\right\}
+\end{equation}
+define
+\begin{equation}
+\label{eq:contraction_space}
+X = X_{\lambda,\epsilon,r_0} = \left\{\xi \in C([0, 1] \to \R_{\geq 0}) : \forall r \in [0, r_0], \abs{\xi(r) - \lambda r^{\beta_+}} \leq \epsilon r^{\beta_+} \right\}
+\end{equation}
+and
+\begin{equation}
+\label{eq:contraction_map}
+T(\xi) = T_{\lambda} (\xi) = G(\xi) + \lambda r^{\beta_+}.
+\end{equation}
+
+Then,
+\begin{enumerate}
+\item \(X \subseteq C([0, 1])\) is a closed, convex subset with respect to the sup-norm, \(\|\cdot\|_{\infty}\), \label{itm:closed}
+\item \(T : X \to X\), \label{itm:self_map}
+\item \(T\) is a strict contraction mapping with respect to the sup-norm, \(\|\cdot\|_{\infty}\). \label{itm:contraction}
+\end{enumerate}
+
+Thus by the Banach fixed point theorem, there exists a unique \(\xi \in X\) such that
 \[
-m(w)^2 [(\zeta')^2]' =  F(\zeta) \zeta'.
+\xi = G(\xi) + \lambda r^{\beta_+}.
+\]
+\end{lemma}
+
+\begin{proof}
+Point \ref{itm:closed} is straight forward: for each \(z \in \R\) and \(r \in [0, r_0]\), the function
+\[
+\Phi : (z, r) \mapsto \abs{z - \lambda r^{\beta_+}} - \epsilon r^{\beta_+}
+\]
+is a continuous map \(\R \times [0, r_0] \to \R\). Now let \((\xi_n)_{n \in \N} \subseteq X\) be such that \(\xi_n \to \xi\) with respect to \(\|\cdot \|_{\infty}\). Then by definition of \(X\), \(\xi_n \geq 0\) and \(\Phi(\xi_n(r), r) \leq 0\). From uniform convergence, for every \(r \in [0, r_0]\) we have \(\xi_n(r) \to \xi(r)\). Thus \(\xi \geq 0\), and by continuity, for every \(r \in [0, r_0]\), \(\Phi(\xi(r), r) \leq 0\) and hence \(\xi \in X\). Convexity follows since if \(\xi_1, \xi_2 \in X\) and \(t \in [0, 1]\), then
+\[
+\begin{split}
+\abs{t\xi_1 + (1-t)\xi_2 - \lambda r^{\beta_+}} &= \abs{t(\xi_1 - \lambda r^{\beta_+}) + (1-t)(\xi_2 - \lambda r^{\beta_+})} \\
+&\leq t \abs{\xi_1 - \lambda r^{\beta_+}} + (1-t)\abs{\xi_2 - \lambda r^{\beta_+}} \\
+&\leq t \epsilon r^{\beta_+}  + (1-t)\epsilon r^{\beta_+} = \epsilon r^{\beta_+}.
+\end{split}
 \]
 
-{\color{red}Surely this is solvable! We now have the awkward factor \([1 + (1-C)w]^{-2}\) preventing us from directly integrating \(F\) as we did for the \(C = 1\) case. The difficulty with applying a general existence theorem is that the function \(m(w)^{-2}\) is not integrable all the way to \(w_0 = -\tfrac{1}{1-C}\). This might actually be what we want - in the \(C = 1\) case we get something similar where we can't integrate \(H\) all the way to \(r = 0\) but it all worked out anyway and we got the \(\ln r\) term.
+For point \ref{itm:self_map}, from definition \eqref{eq:contraction_map} it suffices to show that for \(\xi \in X\) and all \(r \in [0, r_0]\) we have
+\begin{equation}
+\label{eq:G_bdd}
+\abs{G(\xi)} \leq \epsilon r^{\beta_+}.
+\end{equation}
+Being more explicit in the bounds of integration in the definition of \(G\) from \eqref{eq:stationaryC_G}, we define
+\begin{equation}
+\label{eq:G_precise}
+G(\xi(r)) = r^{\beta_-} \int_0^r \left[\rho^{\beta_+ - \beta_- - 1} \int_0^{\rho} \left(\tau^{-(\beta_+ + 1)} \bar{F}(\xi(\tau)) \right)d\tau\right] d\rho.
+\end{equation}
 
-  If take our initial condition at \(w_1 > w_0\), everything is indeed fine for \(w \geq w_1\), but we want to extend the solution back to \(w_0\) where it should satisfy \(\zeta(w_0) = 0\). Because \(F\) is Lipschitz, we do in fact get the right hand side of our ODE is Lipschitz for \(w > w_0\), but it's not uniformly Lipschitz. So we do get a unique solution taking any initial condition at \(w_1 > w_0\).
+Now from \(\abs{\xi - \lambda r^{\beta_+}} \leq \epsilon r^{\beta_+}\) in the definition of \(X\) in \eqref{eq:contraction_space}, the choice \(r_0 < \left(\tfrac{z_0}{\lambda + \epsilon}\right)^{1/\beta_+}\) in \eqref{eq:r_0}, and the assumption that \(0 < \epsilon < \lambda\), we have for \(r \in [0, r_0]\) that
+\[
+0 \leq (\lambda - \epsilon) r^{\beta_+} \leq \xi(r) \leq (\lambda + \epsilon) r^{\beta_+} \leq (\lambda + \epsilon) r_0^{\beta_+} < z_0.
+\]
+Then by the definition of \(z_0, M\) in \eqref{eq:barF_bound},
+\[
+\begin{split}
+r^{-(\beta_+ + 1)} \abs{\bar{F}(\xi)(r)} &\leq M r^{-(\beta_+ + 1)} \abs{\xi(r)}^{1+\alpha} \leq M r^{-(\beta_+ + 1)} (\lambda + \epsilon)^{1+\alpha} r^{(1+\alpha)\beta_+} \\
+&= M(\lambda + \epsilon)^{1+\alpha} r^{\alpha\beta_+ - 1}.
+\end{split}
+\]
+Substitution into \eqref{eq:G_precise} gives,
+\[
+\begin{split}
+\abs{G(\xi(r))} &\leq  M (\lambda + \epsilon)^{1+\alpha} r^{\beta_-} \int_0^r \left[\rho^{\beta_+ - \beta_- - 1} \int_0^{\rho} \tau^{\alpha\beta_+ - 1} d\tau\right] d\rho \\
+&= \frac{M (\lambda + \epsilon)^{1+\alpha}}{\alpha\beta_+} r^{\beta_-} \int_0^r \rho^{(1+\alpha)\beta_+ - \beta_- - 1} d\rho \\
+&= \frac{M (\lambda + \epsilon)^{1+\alpha}}{\alpha\beta_+((1+\alpha)\beta_+ - \beta_-)} r^{(1+\alpha)\beta_+} \\
+&\leq \frac{M (\lambda + \epsilon)^{1+\alpha}r_0^{\alpha\beta_+}}{\alpha\beta_+((1+\alpha)\beta_+ - \beta_-)} r^{\beta_+}.
+\end{split}
+\]
+Keep in mind here that \(\alpha, \beta_+ > 0\) and \(\beta_- < 0\) so all integrals are finite and the constants are positive. Now, equation \eqref{eq:G_bdd} will be true provided
+\[
+\frac{M (\lambda + \epsilon)^{1+\alpha}r_0^{\alpha\beta_+}}{\alpha\beta_+((1+\alpha)\beta_+ - \beta_-)} \leq \epsilon
+\]
+which is guaranteed since in equation \eqref{eq:r_0}, we chose \(r_0\) to satisfy
+\[
+r_0 < \left(\frac{\alpha\beta_+((1+\alpha)\beta_+ - \beta_-)\epsilon}{M (\lambda + \epsilon)^{1+\alpha}}\right)^{1/\alpha\beta_+}.
+\]
 
-  Perhaps we can solve the equation with initial condition \(\xi(w_0 + \epsilon) = f(\epsilon)\) with \(f\) chosen appropriately so that \(f(\epsilon) \to 0\) as \(\epsilon \to 0\) to get \(\xi_{\epsilon}\). Then take \(\xi = \lim_{\epsilon \to 0} \xi_{\epsilon}\). The trick is we'll need some a-priori estimates and recall that the Lipschizt constant is not uniform. In fact it's something like
-  \[
-  m(w)^{-2} \text{Lip}(F).
-  \]
-Maybe the structure of the function \(m(w)\) allows us to get the desired estimates? It's just a quadratic...
-}.
+For point \ref{itm:contraction}, let \(\xi_1, \xi_2 \in X\) and let \(\bar{r} \in (0, r_0]\) be such that
+\[
+\|G(\xi_1) - G(\xi_2)\|_{\infty} = \abs{G(\xi_1(\bar{r})) - G(\xi_2(\bar{r}))}.
+\]
+Then
+\[
+\begin{split}
+\|G(\xi_1) - G(\xi_2)\|_{\infty} &\leq \bar{r}^{\beta_-} \int_0^{\bar{r}} \left[\rho^{\beta_+ - \beta_- - 1} \int_0^{\rho} \tau^{-(\beta_+ + 1)} \abs{\bar{F}(\xi_1(\tau)) - \bar{F}(\xi_2(\tau))} d\tau\right] d\rho.
+\end{split}
+\]
+We already know from the asymptotics of \(\bar{F}\) and of \(\xi_1, \xi_2\) that the argument used to prove equation \eqref{eq:G_bdd} shows the inner integral is finite. We estimate
+\[
+\begin{split}
+\int_0^{\rho} \tau^{-(\beta_+ + 1)} \abs{\bar{F}(\xi_1(\tau)) - \bar{F}(\xi_2(\tau))} d\tau &\leq L \int_0^{\rho} \tau^{-(\beta_+ + 1)} \abs{\xi_1(\tau) - \xi_2(\tau)} d\tau \\
+&= L \int_0^{\rho} \tau^{-(\beta_+ + 1)} \abs{\xi_1(\tau) - \lambda \tau^{\beta_+} - (\xi_2(\tau) - \lambda \tau^{\beta_+})} d\tau \\
+&\leq 2 \epsilon L \int_0^{\rho} \tau^{-1} d\tau \\
+\end{split}
+\]
 
+{\color{red} Need just a teensy bit more integrability}
+
+To obtain suitable estimates for our purposes here, take any \(s \in (0, \rho)\) and write
+\[
+\begin{split}
+\int_0^{\rho} \tau^{-(\beta_+ + 1)} \abs{\bar{F}(\xi_1(\tau)) - \bar{F}(\xi_2(\tau))} d\tau &= \int_0^{s} \tau^{-(\beta_+ + 1)} \abs{\bar{F}(\xi_1(\tau)) - \bar{F}(\xi_2(\tau))} d\tau \\
+&\quad + \int_s^{\rho} \tau^{-(\beta_+ + 1)} \abs{\bar{F}(\xi_1(\tau)) - \bar{F}(\xi_2(\tau))} d\tau \\
+&\leq \int_0^{s} \tau^{-(\beta_+ + 1)} \left(\abs{\bar{F}(\xi_1(\tau))} + \abs{\bar{F}(\xi_2(\tau))}\right) d\tau \\
+&\quad + L \|\xi_1 - \xi_2\|_{\infty} \int_s^{\rho} \tau^{-(\beta_+ + 1)} d\tau \\
+&\leq 2\epsilon s^{\beta_+} + \frac{L}{\beta_+}(s^{-\beta_+} - \rho^{-\beta_+}) \|\xi_1 - \xi_2\|_{\infty}
+\end{split}
+\]
+where \(L\) is the Lipshitz constant of \(\bar{F}(z) = F(z) - F'(0) z\), which is \(C^1\) hence in particular Lipschitz. Here we also used \(\eqref{eq:G_bdd}\) in the last inequality.
+
+Integrating again,
+\[
+\begin{split}
+\|G(\xi_1) - G(\xi_2)\|_{\infty} &\leq \bar{r}^{\beta_-} \int_0^{\bar{r}} \rho^{\beta_+ - \beta_- - 1} \left[2\epsilon s^{\beta_+} + \frac{L}{\beta_+}(s^{-\beta_+} - \rho^{-\beta_+}) \|\xi_1 - \xi_2\|_{\infty} \right] d\rho \\
+&= \frac{1}{\beta_+ - \beta_-} \left(2\epsilon s^{\beta_+} + \frac{L}{\beta_+} s^{-\beta_+} \|\xi_1 - \xi_2\|_{\infty}\right) \bar{r}^{\beta_+}  + \frac{1}{\beta_-} \|\xi_1 - \xi_2\|_{\infty} \\
+&\leq \frac{1}{\beta_+ - \beta_-} \left(2\epsilon s^{\beta_+} + \frac{L}{\beta_+} s^{-\beta_+} \|\xi_1 - \xi_2\|_{\infty}\right) \bar{r}^{\beta_+} \\
+&= \frac{1}{\beta_+ - \beta_-} \left(2\epsilon \bar{r}^{2\beta_+} + \frac{L}{\beta_+} \|\xi_1 - \xi_2\|_{\infty}\right) \left(\frac{\bar{r}}{s}\right)^{\beta_+} \\
+\end{split}
+\]
+since \(\beta_- \leq 0\).
+
+
+\hrule
+
+For point \ref{itm:contraction}, we also make use of equation \eqref{eq:G_bdd}. Let \(\xi_1, \xi_2 \in X\). We wish to show that there exists an \(L \in [0, 1)\) such that
+\[
+\|G(\xi_1) - G(\xi_2)\|_{\infty} \leq L\|\xi_1 - \xi_2\|_{\infty}.
+\]
+Equation \eqref{eq:G_bdd} and the strict inequality in the definition of \(r_0\) in \eqref{eq:r_0} gives
+\[
+|G(\xi_1(r)) - G(\xi_2(r))| \leq |G(\xi_1(r))| + |G(\xi_2(r))| < 2\epsilon r^{\beta_+} \leq 2 \epsilon r_0^{\beta_+}
+\]
+so that
+\[
+\|G(\xi_1) - G(\xi_2)\|_{\infty} < 2 \epsilon r_0^{\beta_+}.
+\]
+On the other hand, the definition of \(X\) in equation \eqref{eq:contraction_space} ensures that for \(i = 1,2\),
+\[
+(\lambda - \epsilon) r^{\beta_+} \leq \xi_i(r) \leq (\lambda + \epsilon) r^{\beta_+}.
+\]
+Therefore,
+\[
+-2\epsilon r^{\beta_+} = (\lambda - \epsilon) r^{\beta_+} - (\lambda + \epsilon) r^{\beta_+} \leq \xi_1(r) - \xi_2(r) \leq (\lambda + \epsilon) r^{\beta_+} - (\lambda - \epsilon) r^{\beta_+} = 2 \epsilon r^{\beta_+}.
+\]
+That is
+\[
+\abs{\xi_1(r) - \xi_2(r)} \leq 2\epsilon r^{\beta_+}.
+\]
+{\color{red} Not much use.}
+{\color{red} This is the closest I can get just now:}
+
+We do have
+\[
+\xi(r) \geq (\lambda - \epsilon) r^{\beta_+} < \frac{\lambda}{2} r^{\beta_+}
+\]
+if we choose \(\epsilon < \tfrac{\lambda}{2}\). Then
+\[
+\|\xi\|_{\infty} \geq \frac{\lambda}{2} r_0^{\beta_+} >  \epsilon r_0^{\beta_+} \geq \|G(\xi)(r)\|_{\infty}
+\]
+by equation \eqref{eq:G_bdd}. Therefore, \(G\) is strictly norm decreasing on \(X\).
 \end{proof}
 
 \section{Blow up}
